--- a/WS2812/impl/project_process_config.json
+++ b/WS2812/impl/project_process_config.json
@@ -5,6 +5,8 @@
  "COMPRESS" : false,
  "CRC_CHECK" : true,
  "Clock_Conversion" : true,
+ "Clock_Route_Order" : 0,
+ "Correct_Hold_Violation" : true,
  "DONE" : false,
  "DOWNLOAD_SPEED" : "default",
  "Default_Enum_Encoding" : "default",
@@ -21,6 +23,7 @@
  "Generate_Post_PNR_Simulation_Model_File" : false,
  "Generate_Post_Place_File" : false,
  "Generate_SDF_File" : false,
+ "Generate_VHDL_Post_PNR_Simulation_Model_File" : false,
  "GwSyn_Loop_Limit" : 2000,
  "HOTBOOT" : false,
  "I2C" : false,
@@ -66,12 +69,13 @@
  "Show_All_Warnings" : false,
  "Synthesis On/Off Implemented as Translate On/Off" : false,
  "Synthesize_tool" : "GowinSyn",
+ "TclPre" : "",
  "TopModule" : "",
  "USERCODE" : "default",
  "Unused_Pin" : "As_input_tri_stated_with_pull_up",
  "Update_Compile_Point_Timing_Data" : false,
  "Use_Clock_Period_for_Unconstrainted IO" : false,
- "Use_SCF" : false,
+ "VCCAUX" : "3.3",
  "VHDL_Standard" : "VHDL_Std_1993",
  "Verilog_Standard" : "Vlg_Std_2001",
  "WAKE_UP" : "0",
